--- a/index.html
+++ b/index.html
@@ -4,8 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awal Portofolio</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div class="logo-icon"></div>
+
+        <section>
+            <a class="nav-item" href="#home">Home</a>
+            <a class="nav-item" href="#facilities">Our Facilities</a>
+            <a class="nav-item" href="#message-us">Message Us</a>
+        </section>
+    </nav>
+
+    <hr>
+
+    <section>
+        <!-- Home -->
+        <section id="home">
+            <header>
+                <h1>Hi Awal, Welcome to website</h1>
+            </header>
+
+            <article>
+                <p>Lorem ipsum</p>
+                <div class="banner-container">
+
+                </div>
+            </article>
+        </section>
+
+        <hr>
+
+        <!-- Our Facilities -->
+        <section id="facilities">
+            <header>
+                <h1>Our Facilities</h1>
+            </header>
+
+            <article class="facility-list">
+                <div>
+                    <div style="width: 50px; height: 50px; border: 1px solid black;"></div>
+                    <h5>Free Refill</h5>
+                </div>
+
+                <div>
+                    <div style="width: 50px; height: 50px; border: 1px solid black;"></div>
+                    <h5>Free Refill</h5>
+                </div>
+
+                <div>
+                    <div style="width: 50px; height: 50px; border: 1px solid black;"></div>
+                    <h5>Free Refill</h5>
+                </div>
+            </article>
+        </section>
+
+        <hr>
+
+        <!-- Message Us -->
+        <section id="message-us">
+            <header>
+                <h1>Message Us</h1>
+            </header>
+
+            <section class="message-us-section">
+                <!-- Form -->
+                <section>
+                    <form action="">
+                        <label>Name:</label>
+                        <input />
+                    </form>
+                </section>
+
+                <!-- Result -->
+                <section class="result-container">
+                    <div class="form-result">
+
+                    </div>
+                </section>
+            </section>
+        </section>
+        
+    </section>
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
